# dbt-vector

./: .env.vectorize.example  .gitignore  README.md  dbt_project.yml  docker-compose.yml  profiles.example.yml  pyproject.toml  setup.py
.github/workflows/: release.yml  rust-tests.yml
data/: staging_docs.csv  staging_docs_extra.csv
dbt_vectorize/: cli.py
examples/: profiles.yml
examples/consumer/: packages.yml
examples/models/: vector_knowledge_base.sql
macros/: embedding_generate.sql
macros/adapters/: vector_index_pgvector.sql
macros/materializations/: vector_index.sql
macros/utils/: embedding_generate_default.sql  vector_index_run_default.sql
models/: vector_knowledge_base.sql  vector_knowledge_base_2000.sql  vector_knowledge_base_2000_varied.sql  vector_knowledge_base_incremental.sql  vector_my_docs.sql
python/: pyproject.toml
python/dbt_vectors/: __init__.py  embedding.py
rust/embedding_engine/: Cargo.toml  Dockerfile  Makefile
rust/embedding_engine/src/: lib.rs
rust/embedding_engine/tests/: embed_tests.rs
scripts/: build_wheel_with_binary.sh
tests/: vector_knowledge_base_incremental_dimensions.sql  vector_knowledge_base_incremental_non_null.sql  vector_knowledge_base_incremental_non_zero.sql
