[build-system]
requires = ["setuptools>=70.1"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-vectorize"
version = "0.1.3"
description = "dbt + Rust vectorization runner for pgvector"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  { name = "Maria Dubyaga", email = "kraftaa@gmail.com" }
]
dependencies = [
  "PyYAML>=6.0",
]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
dbt-vectorize = "dbt_vectorize.cli:main"

[project.urls]
Homepage = "https://github.com/kraftaa/dbt-vector"
Repository = "https://github.com/kraftaa/dbt-vector"

[tool.setuptools]
packages = ["dbt_vectorize", "dbt_vectorize.bin"]
include-package-data = true

[tool.setuptools.package-data]
dbt_vectorize = ["bin/*"]
