[project]
name = "dbt-vectors"
version = "0.0.1"
description = "Prototype helpers for dbt vector_index materialization"
authors = [{ name = "Your Name", email = "" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
  "dbt-core>=1.7",
  "pydantic>=2.6",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
pgvector = ["psycopg[binary,pool]>=3.1"]
pinecone = ["pinecone-client>=4.0"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
