[package]
name = "embedding_engine"
version = "0.0.1"
edition = "2021"
description = "Prototype Rust embedding engine for dbt-vectors"
license = "Apache-2.0"

[lib]
name = "embedding_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Add your embedding client (OpenAI, etc.) here
pyo3 = { version = "0.26", features = ["extension-module", "abi3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "rustls-tls", "blocking"] }
thiserror = "1"

[dev-dependencies]
httpmock = "0.6"
once_cell = "1"
